# zkxjWm

./: .gitignore  CMakeLists.txt  README.md  notes
src/: config.cpp  display.cpp  main.cpp  window.cpp  windowmanager.cpp
src/incl/: config.h  display.h  hotkeyconfig.h  keyboardhook.h  vec.h  window.h  windowconfig.h  windowmanager.h
